--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
             padding: 0;
         }
         #tree-container {
+            position: relative;
             width: 100vw;
             height: 100vh;
             max-width: 100vw;
             max-height: 100vh;
-            overflow: auto;
+            overflow: auto !important;
             border: 1px solid #ccc;
             box-sizing: border-box;
         }
         #tree-svg {
             display: block;
+            min-width: 100%;
+            min-height: 600px;
         }
     </style>
 </head>
