--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             <label>Name: <input type="text" id="node-name"></label><br>
             <label>Power: <input type="number" step="0.01" id="node-power"></label><br>
             <label>Color: <input type="color" id="node-color"></label><br>
+            <div id="order-buttons" style="margin:8px 0;">
+                <button id="move-up" title="Move node up" style="font-size:1.2em;">▲</button>
+                <button id="move-down" title="Move node down" style="font-size:1.2em;">▼</button>
+            </div>
         </div>
         <div id="tree-container">
             <svg id="tree-svg"></svg>
