add duplicate node button, QOL btn

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div id="node-group" style="margin-bottom:10px;">
                 <button id="add-node">Add Node</button>
                 <button id="remove-node">Remove Node</button>
+                <button id="duplicate-node">Duplicate Node</button>
             </div>
             <div id="file-group" style="margin-bottom:10px;">
                 <button id="export-tree">Export Tree</button>
