Add more attributes part number, reference, price, vendor, internal number

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             <label>Color: <input type="color" id="node-color"></label><br>
             <label>Location: <input type="text" id="node-location"></label><br>
             <label>Note: <input type="text" id="node-note"></label><br>
+            <label>Part Number: <input type="text" id="node-part-number"></label><br>
+            <label>Reference: <input type="text" id="node-reference"></label><br>
+            <label>Price: <input type="text" id="node-price"></label><br>
+            <label>Vendor: <input type="text" id="node-vendor"></label><br>
+            <label>Internal Number: <input type="text" id="node-internal-number"></label><br>
             <div id="order-buttons" style="margin:8px 0;">
                 <button id="move-up" title="Move node up" style="font-size:1.2em;">▲</button>
                 <button id="move-down" title="Move node down" style="font-size:1.2em;">▼</button>
