Add buttons to adjust the vertical spacing

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             <div id="zoom-group" style="margin-bottom:10px;">
                 <button id="zoom-fit">Bring to Center</button>
             </div>
+            <div id="spacing-group" style="margin-bottom:10px;">
+                <h3>Vertical Spacing</h3>
+                <button id="increase-spacing">+</button>
+                <button id="decrease-spacing">-</button>
+            </div>
             <div id="display-options">
                 <h3>Display Options</h3>
                 <div id="attribute-list"></div>
